# bulletin-xdu

./: .gitignore  AGENT.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: deploy-cloudflare-pages.yml  deploy-pages.yml  scrape.yml
config/: sources.yaml
data/: amn.json  bksy.json  ce.json  cs.json  dzb.json  eme.json  gr.json  hqbzb.json  imse.json  index.json  jcdlyjy.json  jgrsrc.json  jsfz.json  jwc.json  life.json  math.json  phy.json  rwxy.json  sai.json  sast.json  see.json  sem.json  sfl.json  sie.json  sme.json  soe.json  ste.json  sys.json  xdwy.json  xgc.json  ygb.json
output/: feed.json  index.html  index.md
output/sources/: amn.json  bksy.json  ce.json  cs.json  dzb.json  eme.json  gr.json  hqbzb.json  imse.json  jcdlyjy.json  jgrsrc.json  jsfz.json  jwc.json  life.json  math.json  phy.json  rwxy.json  sai.json  sast.json  see.json  sem.json  sfl.json  sie.json  sme.json  soe.json  ste.json  sys.json  xdwy.json  xgc.json  ygb.json
src/bulletin/: config.py  main.py  models.py  store.py
src/bulletin/adapters/: __init__.py  base.py  dedecms.py  xidian_cms.py
src/bulletin/utils/: http.py
tests/: conftest.py  test_config.py  test_models.py  test_store.py  test_xidian_cms.py
tests/fixtures/: jwc_page1.html  math_page1.html
